{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "0cd20430-6d7b-48cd-860c-1b25aeada45c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "76f7c429-9384-4861-9556-b37f69792d54",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "d2d275db-8f10-4c04-97c8-d3f94970d27a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GyroLook",
                    "type": "Value",
                    "id": "b11ac6c2-d36f-47bf-9836-4e754c83f3c1",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e4d2d17d-e06b-45d3-9263-23eebd69fddf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "5084cf6b-6a12-41ab-81ce-5a8e180641eb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "ac755d90-8c82-416b-88e3-93c04f868d59",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6ff70a38-986b-4c1a-9eb6-2c39c0cf5b5e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "ad7c722d-6efe-4e49-a31c-6fe9e3fa9fd5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "acf6f06d-1c3a-482e-9d9a-f470745fb143",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "267c12cc-fde4-4ecb-b213-3d90275dd129",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "92fbfdb5-f05f-4774-9da3-9a62c1015748",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7fd4226e-2376-4e91-a643-ac305f9cb185",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dfe7be08-edd2-444b-af2a-7e542c71a178",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "904974d8-371d-4eb6-89ed-b6769621a146",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f1595aa-69fd-4a10-af2c-7cb280a68a0b",
                    "path": "<Gyroscope>/angularVelocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GyroLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9d900b4-8ef7-4c82-af2f-f14f008a0ec2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "357f6854-369d-4406-94a0-eded316827a7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e12e36d1-e9e5-45d4-b97d-90c331236a18",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d02b26e-9098-4b07-8c4d-6b036c336892",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13de641c-e7b8-4f34-8f97-961f35cab3fe",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66dfa7ab-772c-49af-9584-2d352f350c85",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DragonFlight",
            "id": "5c2bd7b4-5e20-464d-a2a7-d4c6c158e564",
            "actions": [
                {
                    "name": "Throttle",
                    "type": "Value",
                    "id": "7187a827-271d-4571-b70f-1e4256b9ed95",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Yaw",
                    "type": "Value",
                    "id": "10dcfd11-ddcc-4a16-ab6d-993415f1e7d5",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VerticalFlight",
                    "type": "Value",
                    "id": "7a979d8e-7609-4929-8f5c-45d1a5360638",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleFlight",
                    "type": "Button",
                    "id": "48dcfd34-2331-4791-9fd4-072b358fc9e8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cb55c06d-224c-4387-9135-d0a09c7f17b8",
                    "path": "<Keyboard>/w",
                    "interactions": "Press",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7743b79-40a9-4393-aab0-7fdb8cbf0b75",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "Normalize(max=-1)",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b32446fb-52a0-4d38-82da-bb3f2ff4a165",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31eae775-157c-4d53-82a7-dc367c8828a5",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "Normalize(max=-1)",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9c35e6c-c0fc-4641-83f9-4d0759bcf2d2",
                    "path": "<Keyboard>/a",
                    "interactions": "Press",
                    "processors": "Normalize(max=-1)",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b3ab647-723f-4f74-92af-5c064d298a2f",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05180464-d61e-43d1-a643-05f0a95264da",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14935ecb-44fe-48e1-a224-18b58342ee73",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "VerticalFlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "140f4882-bf02-4dda-b9d6-6d307f29631c",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Press",
                    "processors": "Normalize(max=-1)",
                    "groups": "",
                    "action": "VerticalFlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3bc5812-5cd2-485e-9596-50ee1d68c0ca",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "VerticalFlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "89bd9f78-9eb7-472a-9425-f71fa623880f",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "Normalize(max=-1)",
                    "groups": "",
                    "action": "VerticalFlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3c8aa2b-5e45-4e2c-a17a-9e1874e33e89",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17174075-def0-47ad-ace0-9bc5820f284b",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}